# BlackHoleSimulation

./: Application.hpp  CMakeLists.txt  README.md  main.cpp
shader_vk/: blackhole_common.glsl  blackhole_main.frag  bloom_brightness_pass.frag  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  fullscreen.vert  passthrough.frag  tonemapping.frag
